--- a/src/app/home/Components/SRD/slider/slider.component.scss
+++ b/src/app/home/Components/SRD/slider/slider.component.scss
@@ -9,15 +9,119 @@
 
 .picsum-img-wrapper {
     width: 100vw;
-    height: 100vh;
+    height: auto;
+    position: relative;
 }
+.overlay-svg-hero{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: radial-gradient(transparent, #000000);
 
+}
 .slider {
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh + 67px);
     position: relative;
     font-family: 'Tajawal', sans-serif;
     text-align: right;
+    position: relative;
+}
+.svg-hero{
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.title{
+  color: #FFF;
+  width: 600px;
+  text-align: center;
+  font-family: "IBM Plex Sans Arabic";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 55.9px;
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.wrapper{
+  position: absolute;
+    bottom: 0;
+    z-index: 400;
+    left: 0;
+    width: 100%;
+}
+.slider-footer{
+    overflow-x: hidden;
+    position: relative;
+    height: 6.25rem;
+    z-index: 200;
+}
+.curve-container{
+  // width: 200%;
+  // left: -50%;
+  box-sizing: border-box;
+  position: absolute;
+  height: 100%;
+  margin: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: solid .25rem transparent;
+  border-top-left-radius: 50% 100%;
+  border-top-right-radius: 50% 100%;
+  border-bottom: none;
+  background: radial-gradient(50% 500% at 50% -420%, #4061e766 80%, #0000001a 100%), #00101b;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  // background: red;
+}
+.curve-container::after{
+  content: "";
+  position: absolute;
+  height: 100%;
+  margin: auto;
+  top: 0;
+  right: 0;
+  z-index: 23;
+  margin-top: -0.25rem;
+  border-radius: inherit;
+  background-clip: padding-box;
+  // background: linear-gradient(to right, #009dff00 16%, #009dff85, #2E90FA, #009dff85, #009dff11 84%);
+  background: linear-gradient(to right, #01121c 16%, #06507f, #2E90FA, #06507f, #01121c 84%);
+  z-index: -1;
+  margin-top: -4px;
+  height: 100%;
+  width: 100%;
+}
+@media (min-width: 1280px) {
+  .curve-container {
+      width: 130%;
+      left: -15%;
+  }
+}
+@media (min-width: 960px) {
+  .curve-container {
+      width: 150%;
+      left: -25%;
+  }
+}
+@media (min-width: 600px) {
+  .curve-container {
+      // width: 180%;
+      // left: -40%;
+      width: 130%;
+      left: -15%;
+  }
 }
 
 video {
