--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,6 +13,7 @@ body {
     font-family: "Tajawal", sans-serif;
     overflow-x: hidden;
     position: relative;
+    background-color: #000;
 }
 
 .hidden {
@@ -76,10 +77,7 @@ app-services-catalogue {
     border-top: 6px solid #dcc69d;
 }
 
-// .seprate {
-//     opacity: 0.5;
-//     mix-blend-mode: color-dodge;
-// }
+
 #particle-js {
     width: 100%;
     min-height: 200vh;
@@ -446,28 +444,28 @@ app-sectors {
 .header{
     background-image: linear-gradient(to bottom,#00000086, #0000005f, transparent);
 }
-.header-line{
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    position: absolute;
-    top: 75px;
-    z-index: 999;
-    animation:lineWidth 3s ease-out;
-    animation-delay: 5.8s;
-}
-@keyframes lineWidth{
-    from{
-        left: 100%;
-    }
-    to{
-        left: 0;
-    }
-}
-@media (max-width: 991px) {
+// .header-line{
+//     width: 100%;
+//     height: 2px;
+//     background-color: #fff;
+//     position: absolute;
+//     top: 75px;
+//     z-index: 999;
+//     animation:lineWidth 3s ease-out;
+//     animation-delay: 5.8s;
+// }
+// @keyframes lineWidth{
+//     from{
+//         left: 100%;
+//     }
+//     to{
+//         left: 0;
+//     }
+// }
+// @media (max-width: 991px) {
 
-    .header-line{
-        opacity:0;
-        
-    }
-}
+//     .header-line{
+//         opacity:0;
+
+//     }
+// }
